--- a/Password_Change.yml
+++ b/Password_Change.yml
@@ -12,4 +12,4 @@
         interact
         exit 0
       args:
-        executable: /usr/bin/expect
+        executable: /usr/bin/expect # overriding the default shell
